--- a/src/content/blog/distr-docker-swarm.mdx
+++ b/src/content/blog/distr-docker-swarm.mdx
@@ -16,16 +16,16 @@ tags:
   - docker swarm
 ---
 
-I am Jakob—an engineer working at Glasskube, which helps software and AI companies distribute their applications to self-managed environments.
+I am Jakob—an engineer working at Glasskube, which helps [software and AI companies](/glossary/isv-meaning/) distribute their applications to [self-managed environments](/glossary/self-managed-software/).
 We build an Open Source Software Distribution platform called Distr ([`github.com/glasskube/distr`](https://github.com/glasskube/distr)).
 
-If you've ever thought that **Docker Compose** is too basic for your deployment needs, but a full **Kubernetes** setup feels like overkill, you're definitely not alone.
+If you've ever thought that **Docker Compose** is too basic for your deployment needs, but a full **[Kubernetes](/glossary/kubernetes/)** setup feels like overkill, you're definitely not alone.
 
 <hr />
 
 Luckily, Docker has come up with a solution just for this: Docker Swarm.
 This tool lets you connect multiple Docker daemons to create a Swarm cluster, giving you access to distributed computing features.
-With Docker Swarm, you get benefits like scheduling, better availability, and many of the advantages that come with cloud-native technologies like Kubernetes.
+With Docker Swarm, you get benefits like scheduling, better availability, and many of the advantages that come with cloud-native technologies like [Kubernetes](/glossary/kubernetes/).
 
 On top of that, Docker Stacks make it easy to deploy almost any Compose file to your Swarm cluster.
 This means you can take advantage of a distributed deployment infrastructure while keeping your application manifest straightforward and easy to manage.
