--- a/src/content/blog/distr-registry.mdx
+++ b/src/content/blog/distr-registry.mdx
@@ -28,14 +28,14 @@ import deployLogsDark from '../../assets/blog/2025-05-22-distr-registry/lw-deplo
 
 Today, we are happy to announce that the Distr [artifact registry](https://distr.sh/docs/product/registry/) is now Generally Available (GA).
 
-Manage and distribute container images, [Helm charts](/glossary/helm-chart/), and other [OCI artifacts](/glossary/oci-container-artifact-registry/) with license-based access control, audit logs, and a visual UI that makes [self-managed](/glossary/self-managed-software/) software distribution pretty darn simple if we do say so ourselves, built for both you and your customers.
+Manage and distribute container images, [Helm charts](/glossary/helm-chart/), and other [OCI artifacts](/glossary/oci-container-artifact-registry/) with license-based access control, audit logs, and a visual UI that makes [self-managed](/glossary/self-managed-software/) software distribution pretty darn simple if we do say so ourselves, built for both you and your customers. These [software and AI companies](/glossary/isv-meaning/) need robust distribution solutions.
 
 <hr />
 
 ## Why we built a registry into Distr
 
-Distr was originally built to help vendors manage software distribution in agent based [assisted self-managed](https://distr.sh/docs/use-cases/assisted-self-managed/) environments.
-But as end customers increasingly requested full control over their deployments, vendors needed a way to offer a [fully self-managed model](https://distr.sh/docs/use-cases/fully-self-managed/) as well.
+Distr was originally built to help vendors manage software distribution in agent based [assisted self-managed](/docs/use-cases/assisted-self-managed/) environments.
+But as end customers increasingly requested full control over their deployments, vendors needed a way to offer a [fully self-managed model](/docs/use-cases/fully-self-managed/) as well.
 Other third-party registries lacked the fine-grained access controls and visibility these scenarios call for, so that's why we built an OCI-compliant registry directly into Distr, enabling both assisted and fully self-managed distribution, with features like tag-based access control and detailed download logs.
 
 ## Why is Self-Managed artifact distribution hard?
@@ -78,7 +78,7 @@ The registry supports any [OCI artifact](/glossary/oci-container-artifact-regist
 
 ### License-based access control
 
-Vendors can restrict access by using Artifacts licenses. Grant or revoke permissions to one or many artifacts at the tag level. Update instantly when entitlements change.
+Vendors can restrict access by using [Artifacts licenses](/glossary/software-license-management/). Grant or revoke permissions to one or many artifacts at the tag level. Update instantly when entitlements change.
 
 <div
   className="app-frame mac dark borderless shadow--tl"
@@ -139,11 +139,11 @@ The Downloads page gives granular artifact consumption logs
 </div>
 ## What's next for the Registry?
 
-We’re just getting started, here’s what’s coming soon:
+We're just getting started, here's what's coming soon:
 
-- Integrated CVE scanning for registry artifacts
+- Integrated [CVE scanning](/glossary/cve-common-vulnerabilities-and-exposures/) for registry artifacts
 - Download history query & export
-- Visual indicators and download for SBOM & image signature layers
+- Visual indicators and download for [SBOM](/glossary/sbom-software-bill-of-materials/) & [image signature](/glossary/oci-container-artifact-registry/#image-signing-and-verification) layers
 
 ## Give it a try today
 
