--- a/src/content/docs/docs/use-cases/air-gapped.mdx
+++ b/src/content/docs/docs/use-cases/air-gapped.mdx
@@ -36,7 +36,7 @@ Distr offers two approaches to support these environments:
       and the Distr's IP addresses can be whitelisted for secure access.
     </Aside>
     <Steps>
-    1. Set Up Your [Registry](/docs/guides/container-registry/)
+    1. Set Up Your [Registry](/docs/product/registry/)
     2. Onboard Your [Application](/docs/guides/onboarding-a-helm-app/)
     3. White-label the [Customer portal](/docs/product/branding/)
     4. Onboard your first [customer](/docs/guides/onboarding-a-new-customer/)
